grammar analysis